--- a/arduino/ch4_arduino.ipynb
+++ b/arduino/ch4_arduino.ipynb
@@ -11,7 +11,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###- <a href='http://123d.circuits.io/circuits/690592-arduino-base-code'>기본코드 예제</a>"
+    "###- 기본코드 예제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690592-arduino-base-code\" frameborder=\"0\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690592-arduino-base-code\" frameborder=\"0\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -27,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - <a href='http://www.hardcopyworld.com/ngine/aduino/index.php/archives/1040'>PWM ???</a>"
+    "### - <a href='http://www.hardcopyworld.com/ngine/aduino/index.php/archives/1040'>PWM 이란</a>"
    ]
   },
   {
@@ -52,6 +78,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690615-pwm-output\" frameborder=\"0\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690615-pwm-output\" frameborder=\"0\" allowfullscreen></iframe>')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -68,24 +120,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690667-digital-input\" frameborder=\"0\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "###- <a href='http://blog.naver.com/roboholic84/220309707543'>플로팅 개념</a>"
+    "from IPython.display import HTML\n",
+    "HTML('<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690667-digital-input\" frameborder=\"0\" allowfullscreen></iframe>')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - Pull up\n"
+    "###- <a href='http://blog.naver.com/roboholic84/220309707543'>Floating, Pull up,  Pull Down 개념</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - Pull Down"
+    "- 간단하게 요약하자면, 외부 변화가 생기기 전에 입력 핀을 VCC(5V) 입력 상태로 묶어두는 것이 pull-up, GND(0V) 입력 상태로 묶어두는 것이 pull-down 저항입니다.\n"
    ]
   },
   {
@@ -103,11 +174,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/693676-analog-inputt\" frameborder=\"0\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/693676-analog-inputt\" frameborder=\"0\" allowfullscreen></iframe>')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#5. 아두이노 보드에 LCD 연결하기 "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"720\" height=\"500\" src=\"//www.youtube.com/embed/YyEReiAYGlU\" frameborder=\"0\" allowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('<iframe width=\"720\" height=\"500\" src=\"//www.youtube.com/embed/YyEReiAYGlU\" frameborder=\"0\" allowfullscreen></iframe>')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
