--- a/arduino/ch4_arduino.ipynb
+++ b/arduino/ch4_arduino.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,9 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -7590,7 +7591,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7598,6 +7599,27 @@
    "source": [
     "from IPython.display import Image\n",
     "Image(filename='images/lcd.jpg') "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#include <LiquidCrystal.h>\n",
+    "\n",
+    "LiquidCrystal lcd(12, 11, 5, 4, 3, 2);\n",
+    "\n",
+    "void setup() {\n",
+    "  // put your setup code here, to run once:\n",
+    "  lcd.begin(16, 2);\n",
+    "  lcd.print(\"hello arduino !!\");\n",
+    "}\n",
+    "\n",
+    "void loop() {\n",
+    "  // put your main code here, to run repeatedly:\n",
+    "  lcd.setCursor(0, 1);\n",
+    "  lcd.print(millis() / 1000);\n",
+    "}"
    ]
   }
  ],
