lcd example source code is added.

--- a/arduino/ch4_arduino.ipynb
+++ b/arduino/ch4_arduino.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -7591,7 +7591,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7599,6 +7599,13 @@
    "source": [
     "from IPython.display import Image\n",
     "Image(filename='images/lcd.jpg') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - source code"
    ]
   },
   {
