--- a/arduino/ch4_arduino_20150402.ipynb
+++ b/arduino/ch4_arduino_20150402.ipynb
@@ -7609,10 +7609,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#include <LiquidCrystal.h>\n",
+    "\\#include <LiquidCrystal.h>\n",
     "\n",
     "LiquidCrystal lcd(12, 11, 5, 4, 3, 2);\n",
     "\n",
