--- a/arduino/ch4_arduino_20150402.ipynb
+++ b/arduino/ch4_arduino_20150402.ipynb
@@ -7609,10 +7609,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "\\#include <LiquidCrystal.h>\n",
+    "#include <LiquidCrystal.h>\n",
     "\n",
     "LiquidCrystal lcd(12, 11, 5, 4, 3, 2);\n",
     "\n",
