--- a/arduino/ch4_arduino_20150402.ipynb
+++ b/arduino/ch4_arduino_20150402.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -24,20 +24,20 @@
     {
      "data": {
       "text/html": [
-       "<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690592-arduino-base-code\" frameborder=\"0\" allowfullscreen></iframe>"
+       "<iframe width=\"100%\" height=\"700\" src=\"//123d.circuits.io/circuits/690592-arduino-base-code\" frameborder=\"0\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML('<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690592-arduino-base-code\" frameborder=\"0\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"100%\" height=\"700\" src=\"//123d.circuits.io/circuits/690592-arduino-base-code\" frameborder=\"0\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -115,20 +115,20 @@
     {
      "data": {
       "text/html": [
-       "<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690615-pwm-output\" frameborder=\"0\" allowfullscreen></iframe>"
+       "<iframe width=\"100%\" height=\"700\" src=\"//123d.circuits.io/circuits/690615-pwm-output\" frameborder=\"0\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML('<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690615-pwm-output\" frameborder=\"0\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"100%\" height=\"700\" src=\"//123d.circuits.io/circuits/690615-pwm-output\" frameborder=\"0\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -157,20 +157,20 @@
     {
      "data": {
       "text/html": [
-       "<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690667-digital-input\" frameborder=\"0\" allowfullscreen></iframe>"
+       "<iframe width=\"100%\" height=\"700\" src=\"//123d.circuits.io/circuits/690667-digital-input\" frameborder=\"0\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML('<iframe width=\"1000\" height=\"700\" src=\"//123d.circuits.io/circuits/690667-digital-input\" frameborder=\"0\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"100%\" height=\"700\" src=\"//123d.circuits.io/circuits/690667-digital-input\" frameborder=\"0\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -212,20 +212,20 @@
     {
      "data": {
       "text/html": [
-       "<iframe width=\"1000\" height=\"750\" src=\"//123d.circuits.io/circuits/693676-analog-inputt\" frameborder=\"0\" allowfullscreen></iframe>"
+       "<iframe width=\"100%\" height=\"750\" src=\"//123d.circuits.io/circuits/693676-analog-inputt\" frameborder=\"0\" allowfullscreen></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML('<iframe width=\"1000\" height=\"750\" src=\"//123d.circuits.io/circuits/693676-analog-inputt\" frameborder=\"0\" allowfullscreen></iframe>')"
+    "HTML('<iframe width=\"100%\" height=\"750\" src=\"//123d.circuits.io/circuits/693676-analog-inputt\" frameborder=\"0\" allowfullscreen></iframe>')"
    ]
   },
   {
